--- a/eventhall.html
+++ b/eventhall.html
@@ -661,12 +661,13 @@ var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/5d410f6be5ae967ef80d9cd0/default';
+s1.src='https://embed.tawk.to/5d46fc867d27204601c938f0/default';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
+<!--End of Tawk.to Script-->
 <script>
   window.console = window.console || function(t) {};
 </script>
