--- a/eventhall.html
+++ b/eventhall.html
@@ -231,12 +231,12 @@
                          /*media quary */
 @media(max-width:420px) {
 
-	.thumbnail, .thumbnail img , .thumbnail .title {
+	.thumbnail{
   position: relative;
   top: 0;
   left: 0;
-  width: 50%;
-  height: 50%;
+  width: 80%;
+  height: 55%;
   opacity: .2;
   text-align: center;
   text-transform: uppercase;
