--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -255,7 +255,7 @@ p {
 	margin-left: -20px;
 }
 .single_service.service_right {
-	padding-right: 70px;
+	padding-right: ;
 	padding-left: 0;
 	text-align: right;
 }
