--- a/eventhall.html
+++ b/eventhall.html
@@ -300,6 +300,7 @@
 
 .single_menu_list img {
 	max-width: 40%;
+	height: 30%;
 	position: absolute;
 	left: 0px;
 	top: 0;
@@ -311,7 +312,7 @@
 
 .single_menu_list {
 	position: relative;
-	padding: -30px;
+	padding: -50px;
 }
 }
 
