--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -122,8 +122,10 @@ button1:hover{background-color:#26264b;}
 
                          /*media quary */
 @media(max-width:420px) {
-   .all, .services{
-	 width:100%; size: center center/cover;}
+   .all, .hero{
+	 display:block; width:100%; padding-left:0px; margin:0px; border:none; overflow-bottom: hidden; size: center center/cover;
+}
+.right{float:left;}
 	 
   .bigPicture img{
       margin-right:-50%; padding-left: 0%; width:100%; height:300px ; 
