--- a/about.html
+++ b/about.html
@@ -189,7 +189,8 @@
                     <div class="title">
                         <h6 class="title-primary">OUR VISION AND MISSION</h6>
                         <h1 class="title-blue">What is our desire and our objective?</h1>
-						<p>we endeavour to create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.                                                                                                                </p>
+						<p>we endeavour to create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.
+						</p>
                     </div>
                     <div class="media-element d-flex justify-content-between">
                         <div class="media">
