--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -72,7 +72,7 @@
 
 .right{float:right}
 
-section{display:flex; margin:100px 0; width:1000px}
+section{display:flex; margin:0px 0; width:1000px}
 .picture{width:60%}
 .picture img{
 	 opacity:; margin:15px; border-radius:1%; width:100%; position-fixed
@@ -81,11 +81,11 @@ section{display:flex; margin:100px 0; width:1000px}
 .paragraph h1, h5, .title{
 	text-align:center; letter-spacing:5px; 
 }
-.paragraph h1, .title{font-size:35px; margin:0 30px;}
+.paragraph h1, .title{font-size:35px; margin:0 0px;}
 .paragraph h5{font-size:18px}
-.paragraph p{margin:0 10px;}
+.paragraph p{margin:0 0px;}
 .paragraph span{background-color:lightgrey; padding:1px 10px}
-hr{color:lightgray; width:1000px; margin:-50px 0}
+hr{color:lightgray; width:1000px; margin:0px 0}
 .allContent, .address{margin:0 15px}
 .pictureRight img{
 	width:83%; opacity:;margin:50px  0 0 60px; height:60%; border-radius:1%
@@ -122,31 +122,29 @@ button1:hover{background-color:#26264b;}
 
                          /*media quary */
 @media(max-width:420px) {
-   .all, .hero{
-	 display:block; width:100%; padding-left:0px; margin:0px; border:none; overflow-bottom: hidden; size: center center/cover;
-}
-.right{float:left;}
+   .all, .services{
+	 width:100%; size: center center/cover;}
 	 
   .bigPicture img{
-      margin-right:-50%; padding-left: 0%; width:100%; height:300px ; 
+      margin-right:0%; padding-left: 0%; width:100%; height:300px ; 
     }
 	.theEnd img{
       margin-right: -50%; width:100%; height:300px ;
     }
     section{display:inline-block; position: relative; margin:50px 0px 100px; width:50% !important}
     .picture, .paragraph{width:50%; !important}
-    .paragraph{ margin:10px}
+    .paragraph{ margin:0px}
     .picture img{height:20px; width:50px; margin:2px !important}
     .paragraph h1 {font-size:30px; line-height:40px}
 	.meals h1{font-size:25px; padding-left: 20%; line-height:40px; text-align: center;}
 	 .try h1{margin-left: 10%;}
-    hr{margin-bottom:50px; width:300px !important}
+    hr{margin-bottom:0px; width:300px !important}
     .list p{font-size:8px}
     .list h4{font-size:10px; letter-spacing:3px;}
-    .list{margin:-5px}
+    .list{margin:px}
     .pictureRight img{width:75px;margin:30px  0 0 0px; height:500px !important}
 form input{ 
-display:inline-block; width:50%; margin-right:30px; box-sizing:border-box;
+display:inline-block; width:50%; margin-right:0px; box-sizing:border-box;
 	}
 	
 }
@@ -154,15 +152,15 @@ display:inline-block; width:50%; margin-right:30px; box-sizing:border-box;
 	
 	.services{
 	 width:100%;}
- .bigPicture img{ margin: 50px 50px; width:70%; height:300px}
-section{ margin:50px 0px 100px; width:75%}
+ .bigPicture img{ margin: 50px 0px; width:70%; height:300px}
+section{ margin:50px 0px 0px; width:75%}
  .picture, .paragraph{width:80%;}
  .meals h1{font-size:30px; padding-left: 20%; line-height:40px; text-align: center;}
  .try h1{margin-left: 20%;}
-.paragraph{ margin:10px}
+.paragraph{ margin:0px}
     .picture img{height:700px; width:375px; margin:2px !important}
     .paragraph h1 {font-size:30px; line-height:40px}
-    .title{font-size:20px; margin:-20px 0 0 -100px !important}
+    .title{font-size:20px; margin:0px 0 0 -100px !important}
     hr{margin-bottom:50px; width:800px}
     .list p{font-size:15px}
     .list h4{font-size:16px; letter-spacing:3px;}
@@ -176,7 +174,7 @@ section{ margin:50px 0px 100px; width:75%}
 	 width:100%;size: center center/cover;}
 	 
     .bigPicture img{ margin: 50px 50px; width:75%; height:350px}
-    section{ margin:50px 0px 100px; width:80%}
+    section{ margin:50px 0px 0px; width:80%}
     .picture, .paragraph{width:50%;}
 	.meals h1{font-size:35px; padding-left: 20%; line-height:40px; text-align: center;}
 	.try h1{margin-left: 20%;}
@@ -191,17 +189,17 @@ section{ margin:50px 0px 100px; width:75%}
     .pictureRight img{width:450px;margin:20px  0 0 0px; height:650px}
   }
 @media(min-width:992px) {
-.bigPicture img{width:100%; height:300px ; margin: 50px 100px; size: cover;}
-  section{margin:75px 5px 0px ; width:100%}
+.bigPicture img{width:100%; height:300px ; margin: 50px 0px; size: cover;}
+  section{margin:75px 0px 0px ; width:100%}
     .picture{width:50%;}
-    .paragraph{float:right; margin:10px 20px 5px 0px; width:40%}
+    .paragraph{float:right; margin:10px 0px 0px 0px; width:40%}
     .picture img{height:600px; width:500px; margin:2px !important}
     .paragraph h1 {font-size:30px; line-height:40px}
     .title{font-size:20px; margin:-10px 0 0 -100px !important}
     hr{margin:50px 0; width:1000px}
     .list p{font-size:17px}
     .list h4{font-size:18px; letter-spacing:3px;}
-    .list{margin:10px}
+    .list{margin:0px}
 	.pictureRight{
 		width:50%
 	}
@@ -242,7 +240,7 @@ p {
 	height: 1.5px;
 	bottom: 0;
 	left: 50%;
-	margin-left: -40px;
+	margin-left: 0px;
 }
 .section-title h4::before, .section-title h4::after {
 	position: absolute;
@@ -254,10 +252,10 @@ p {
 	height: 1.5px;
 	bottom: -5px;
 	left: 50%;
-	margin-left: -20px;
+	margin-left: 0px;
 }
 .single_service.service_right {
-	padding-right: ;
+	padding-right: 70px;
 	padding-left: 0;
 	text-align: right;
 }
