--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -77,22 +77,29 @@ html, body {
 }
 @media(max-width:767px) {
 		.pictureRight img{
-		width:83%; opacity:;margin:50px  0 0 60px; height:60%; border-radius:1%
+		margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
 	}
 
 	.picture img{
-		 opacity:; margin:15px; border-radius:1%; width:100%; position-fixed
+		 margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
+	}
+	
+	
+	.bigPicture img{
+		border: 0; margin-left: -2%; padding-right: 0%; width: 100%;
 	}
 
 }
 @media(min-width:768px) {
 	  .pictureRight img{
-		width:83%; opacity:;margin:50px  0 0 60px; height:60%; border-radius:1%
+		margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
 	}
 	.picture img{
-		 opacity:; margin:15px; border-radius:1%; width:100%; position-fixed
+		 margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
 	}
-
+	.bigPicture img{
+		border: 0; margin-left: -2%; padding-right: 0%; width: 100%;
+	}
 }
 @media(min-width:992px) {
 	 .pictureRight img{
@@ -286,7 +293,7 @@ p {
 
  <header class="bigPicture">	
 	<div class="swiper-slide slide-content d-flex align-items-center">
-        <img src="http://ggeventshall.com/images/2018/11/30/kj-logo2.png" class="img-responsive">
+        <img src="http://ggeventshall.com/images/2018/11/30/kj-logo2.png" height="500" width="475" class="img-responsive">
 		</div>
 </header>		
 	
@@ -316,7 +323,7 @@ p {
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://scontent-lga3-1.cdninstagram.com/vp/77b151f7d3d4d5d138775fbfc9d8015c/5DB83B42/t51.2885-15/fr/e15/s1080x1080/58722677_526863451051483_2774287056960760170_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com" class="img-responsive">
+								<img src="https://scontent-lga3-1.cdninstagram.com/vp/77b151f7d3d4d5d138775fbfc9d8015c/5DB83B42/t51.2885-15/fr/e15/s1080x1080/58722677_526863451051483_2774287056960760170_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com" height="525" width="475" class="img-responsive">
 							</div>
 						</div></div>
 							
