--- a/about.html
+++ b/about.html
@@ -63,18 +63,31 @@
 	}
 	
 	.featured-big {
-	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 30%;
+	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
+	}
+	
+	.featured-small {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 }
 	@media(max-width:767px) {
-		.featured-img img{
-		margin-left: 0%; margin:15px; border-radius:1%; margin-top: 50%;
+		.featured-big {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
+	}
+	
+	.featured-small {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
+	}
 	}
 
 }
 @media(min-width:768px) {
-	  .featured-img img{
-		margin-left: 0%; margin:15px; border-radius:1%;margin-top: 50%;
+	 .featured-big {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
+	}
+	
+	.featured-small {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 }
 	</style>
@@ -210,7 +223,8 @@
                     <div class="title">
                         <h6 class="title-primary">OUR VISION AND MISSION</h6>
                         <h1 class="title-blue">What is our desire and our objective?</h1>
-						<p>we endeavour to create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.
+						<p>
+						we endeavour to create a unique and great solution for meetings, gatherings and events by providing a beautiful standard, clean, accessible and affordable facility for our customers.
 						</p>
                     </div>
                     <div class="media-element d-flex justify-content-between">
