--- a/index.html
+++ b/index.html
@@ -793,6 +793,45 @@ form input{
 display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
 	}
 	
+	.item-card {
+		margin-bottom: 5%;
+	}
+}
+
+
+	@media(max-width:420px) {
+	.featured-img {
+		margin-left: 0%; margin:15px; border-radius:1%; margin-top: 2%;
+	}
+	
+	.featured-big {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
+	}
+	
+	.featured-small {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
+	}
+}
+
+	@media(max-width:767px) {
+		.featured-big {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
+	}
+	
+	.featured-small {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
+	}
+
+}
+@media(min-width:768px) {
+	 .featured-big {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 70%; margin-top: 2%;
+	}
+	
+	.featured-small {
+	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
+	}
+}
 </style>
 </head>
 
