--- a/about.html
+++ b/about.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116350981-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-116350981-2');
+</script>
+
     <!--
     /   Multipurpose: Free Template by FreeHTML5.co
     /   Author: https://freehtml5.co
