--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<meta name="keywords" content="meetings, gatherings, events, shops, Kingstine-Jo Foods, Changing rooms,Cold Room, Store room, Car Park, Water Supply, Convenience, Chairs and Tables, Stage/Platform, Conference Room"	/>
 	<meta name='google-site-verification' content='#' />
     <meta name='msvalidate.01' content='#' />
+	<meta name="google-site-verification" content="ZQ3Zza33q1OejvrjO-k4wiJUTkJHsbMbawz6XKmC_Lg" />
     
     <!-- Document title -->
     <title>Great God Events Hall | A unique and great solution for meetings, gatherings and events!</title>
