--- a/about.html
+++ b/about.html
@@ -134,8 +134,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
                     <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +2348140554601</a>
-                    <a href="mailto: info@GGEventshall.com"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@GGEventshall.com</a>
+                    <a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"
+                            aria-hidden="true"></i>info@GGEventhalls.com</a>
                 </div>
                 <nav class="d-flex aic">
                     <ul class="nav social d-none d-md-flex">
@@ -520,7 +520,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <i class="fa fa-envelope-o"></i>
                                 <div class="media-body ml-3">
                                     <h6>Have any questions?</h6>
-                                    <a href="mailto: info@GGEventshall.com"> info@GGEventshall.com</a>
+                                    <a href="mailto: info@GGEventhalls.com"> info@GGEventhalls.com</a>
                                 </div>
                             </div>
                             <div class="media">
@@ -548,19 +548,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Subscribe us</h6>
                             <p>Sign up for our mailing list to get latest updates and offers</p>
-                            <form class="" method="get">
-                                <div class="input-group">
-                                    <input class="field form-control" name="subscribe" type="email"
-                                        placeholder="Email Address">
-                                    <span class="input-group-btn">
-                                        <button type="submit" name="submit-mail"><i class="fa fa-check"></i></button>
+                            <form role="form" id="reused_form" class="contact-form" method="post">
+                                <div class="input-group form-group">
+                                    <input class="field form-control" id="email" name="email" type="email" placeholder="Email Address" required >
+									  <span class="input-group-btn form-group">
+									  <button type="submit" name="submit-mail" class="btn btn-lg btn-default"><i class="fa fa-check"></i></button>
                                     </span>
                                 </div>
                             </form>
+							<div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Posted your message successfully!</h3> </div>
+							<div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+                  
                             <p>We respect your privacy</p>
                             <ul class="nav social-nav">
                                 <li><a href="https://www.facebook.com/ggeventshall" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="mailto: info@GGEventshall.com"><i class="fa fa-envelope"></i></a></li>
+                                <li><a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
