--- a/index.html
+++ b/index.html
@@ -1089,8 +1089,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <a href="about.html" class="btn btn-primary">Know More</a>
                 </div>
-				<div class="col-md-6  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
-                    <div class="featured-img d-none d-sm-flex">
+				<div class="col-md-6  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin-top: 5%;">
+                    <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="Featured 1">
                         <img class="featured-small" src="assets/images/Webp.net-gifmaker.gif" alt="Featured 2">
                     </div>
