--- a/index.html
+++ b/index.html
@@ -810,12 +810,16 @@ form input{
    
   
 form input{ 
-display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
-	}
+	display:inline-block; width:50%; padding:20px; margin:20px; box-sizing:border-box
+}
 	
 	.item-card {
 		margin-bottom: 5%;
 	}
+	
+	.grid-container {
+		padding-bottom: 5%;
+}
 }
 
 
