--- a/index.html
+++ b/index.html
@@ -817,8 +817,8 @@ form input{
 		margin-bottom: 5%;
 	}
 	
-	.grid-container {
-		padding-bottom: 5%;
+	.card-container, .wrapper {
+		margin-bottom: 5%;
 }
 }
 
