--- a/shops.html
+++ b/shops.html
@@ -399,7 +399,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
                     <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 GGEventHalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
-                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="#">Terms Of Use</a><a
+                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="https://tawk.to/chat/5d46fc867d27204601c938f0/default" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>LIVE CHAT </a><a
                         <a href="#">God is Great!</a></p>
                 </div>
             </div>
@@ -432,7 +432,7 @@ var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
 var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
 s1.async=true;
-s1.src='https://embed.tawk.to/5d410f6be5ae967ef80d9cd0/default';
+s1.src='https://embed.tawk.to/5d46fc867d27204601c938f0/default';
 s1.charset='UTF-8';
 s1.setAttribute('crossorigin','*');
 s0.parentNode.insertBefore(s1,s0);
