--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="Featured 1">
 						<div class="text-center darken-grey-text mb-4">
-                        <iframe width="320" height="300" src="https://www.youtube.com/embed/GrgTecML8yM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+                        <iframe width="350" height="300" src="https://www.youtube.com/embed/GrgTecML8yM?rel=0&showinfo=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
 						</div>
                     </div>
                 </div>
